--- a/users.html
+++ b/users.html
@@ -79,15 +79,26 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light menu-elementos">
             <div class="container-fluid">
                 <a class="nav-link active" aria-current="page" href="index.html" tabindex="-1"> Home
-                    <!-- <img class="icono-activo-home" src="https://i.ibb.co/2ZcsN2F/home.png" alt="" width="24"
-                        height="24"> -->
+                    <img class="icono-activo-home" src="https://i.ibb.co/2ZcsN2F/home.png" alt="" width="24"
+                        height="24">
                 </a>
                 <a class="nav-link" aria-current="page" href="users.html" tabindex="-1">
                     Perfil
-                    <!-- <img src="https://i.ibb.co/3RMCBkL/Component-2.png" alt="" width="24" height="24"> -->
+                    <img src="https://i.ibb.co/3RMCBkL/Component-2.png" alt="" width="24" height="24">
                 </a>
             </div>
         </nav>
+    </footer>
+    <!-- Page Footer -->
+    <footer class="mt-3 text-center text-lg-start bg-success bg-opacity-25 text-muted">
+        <!-- Copyright -->
+        <div class="text-center p-1">
+            <img class="" src="./images/own_logo/Logo s3.svg" alt="" width="35" height="35">
+            </a>
+            <a class="text-reset fw-bold me-3 text-decoration-none" href="">HSystem </a>
+            © 2021 Copyright
+            <span class="mx-2">|</span>Created & Powered by Hildebrando Sierra V.
+        </div> <!-- Copyright -->
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
